sql/mysql_priv.h
@@ -44,6 +44,7 @@
 typedef ulonglong table_map;          /* Used for table bits in join */
 typedef Bitmap<64> key_map;           /* Used for finding keys */
 typedef ulong key_part_map;           /* Used for finding key parts */
+typedef ulong nesting_map;  /* Used for flags of nesting constructs */
 
 /* query_id */
 typedef ulonglong query_id_t;
